# meta_hackathon

./: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  inference_demo.py  inference_production.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sql_query_environment.py
data/: tickets.json
env/: __init__.py  environment.py  graders.py  models.py  tasks.py
server/: app.py
