[project]
name = "sql-query-gen"
version = "1.0.0"
description = "SQL Query Generation OpenEnv - Train LLMs to write optimized SQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.24,<1.0",
    "aiosqlite>=0.19,<1.0",
    "sqlparse>=0.4,<1.0",
    "openenv-core>=0.2.3",
    "gradio>=4.0,<5.0",          
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"