[project]
name = "sql-query-gen"
version = "1.0.0"
description = "SQL Query Generation OpenEnv - Train LLMs to write optimized SQL"
authors = [
    { name = "OpenEnv Contributors", email = "openenv@meta.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.24,<1.0",
    "aiosqlite>=0.19,<1.0",
    "sqlparse>=0.4,<1.0",
    "openenv-core>=0.2.3",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21,<1.0",
    "black>=23.0,<24.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sql_query_gen"]

[[tool.hatch.build.targets.sdist.force-include]]
path = "README.md"
glob = "README.md"
